--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,10 @@
 set -s escape-time 0
 
 # ==== Key Bindings ====
+set prefix C-a
+
+unbind-key C-b
+bind-key C-a send-prefix
 
 # reload config changes
 bind r source-file ~/.tmux.conf
@@ -41,7 +45,7 @@ set -g status-left-length 20
 setw -g window-status-current-style 'fg=colour1 bg=colour25 bold'
 setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
 
-setw -g window-status-style 'fg=colour9 bg=colour31'
+setw -g window-status-style 'fg=colour9 bg=colour37'
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour252]#W#[fg=colour250]#F '
 
 setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
