tweaks, add start up tmux script

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,15 +1,15 @@
 # Tmux configuration
 
-# ==== Annoying behaviours ====
-
-# No delay on escape - messes with vim
-set -s escape-time 0
 
 # ==== Key Bindings ====
-set prefix C-a
 
-unbind-key C-b
+# Change tmux command prefix to ctrl-a
+unbind C-b
+set -g prefix C-a
 bind-key C-a send-prefix
+
+# Unbind alt+arrow to stop sending letters to terminal
+unbind Up
 
 # reload config changes
 bind r source-file ~/.tmux.conf
@@ -29,9 +29,26 @@ bind -n M-j select-pane -D
 # prevent tmux from auto renaming tabs
 set-option -g allow-rename off
 
+# ==== Interaction ====
+
+# No delay on escape - messes with vim
+set -s escape-time 0
+
+# Mouse support
+set -g mouse on
+
 # ==== Appearance ====
 
-# statusbar
+# 256 color support
+set -g default-terminal "screen-256color"
+
+# Show activity in background windows
+setw -g monitor-activity on
+
+# Start window numbers from 1
+set -g base-index 1
+
+# Statusbar
 # colour reference: https://jonasjacek.github.io/colors/
 set -g status-position bottom
 set -g status-justify left
